fixed overflow hidden

--- a/style.css
+++ b/style.css
@@ -804,7 +804,6 @@ h6 {
 
 body {
   margin: 0;
-  overflow: hidden;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
